--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -62,10 +62,10 @@
   id: diamond-boutique-hotel
   location: Diamond Boutique Hotel, Kos, Griechenland
   description: "Sommerurlaub 2019: Inkl. Flügen, Halbpension & Transfers"
-  price: 499
+  price: 477
   price-description: pro Person für 7 Nächte
   saved: 26
-  link: http://bit.ly/2PlhjJL
+  link: http://bit.ly/2UCH77V
   flight-tag: true
 
 - title: Genusstage unter griechischer Mittelmeersonne
@@ -132,7 +132,7 @@
   id: Kairaba-Sandy-Villas
   location: Kairaba Sandy Villas, Agios Georgios, Korfu, Griechenland
   description: Suite mit Poolzugang inkl. Flügen, All-inclusive & Transfer
-  price: 799
+  price: 763
   price-description: pro Person für 7 Nächte
   saved: 18
   link: http://bit.ly/2EoaFkC
